--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ psycopg2 = "^2.9.9"
 asyncpg = "^0.29.0"
 pyyaml = "^6.0.1"
 pydantic = {extras = ["email"], version = "^2.7.1"}
+jinja2 = "^3.1.3"
+python-multipart = "^0.0.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
